Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World
+    <div>
+        <img src="images/justme.JPG" alt="profil-image">
+        <h2>Nurul Ikhsan</h2>
+    </div>
+    
 </body>
 </html>
