--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="images/justme.JPG" alt="profil-image">
-        <h2>Nurul Ikhsan</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/justme.JPG" alt="profil-image">
+        <h2 id="profile-name">Nurul Ikhsan</h2>
     </div>
     
 </body>
