--- a/Index.html
+++ b/Index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="header">Header</div>
     <div id="profile-container">
         <img id="profile-image" src="images/justme.JPG" alt="profil-image">
         <h2 id="profile-name">Nurul Ikhsan</h2>
     </div>
-    
 </body>
 </html>
