--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,6 @@
         <img id="profile-image" src="images/justme.JPG" alt="profil-image">
         <h2 id="profile-name">Nurul Ikhsan</h2>
     </div>
-    
+    <div id="footer">Footer</div>
 </body>
 </html>
